@@ -2,11 +2,13 @@ package br.unb.cic.witup.summary;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import br.unb.cic.witup.analysis.AnalysisResult;
 import br.unb.cic.witup.analysis.ExceptionPath;
 import br.unb.cic.witup.analysis.MethodSummary;
 import br.unb.cic.witup.analysis.ThrowSiteKind;
+import br.unb.cic.witup.analysis.symbolic.SymbolicConstraint;
 import br.unb.cic.witup.testinfra.TestAnalysisContext;
 import java.util.List;
 import org.junit.jupiter.api.Test;
@@ -20,15 +22,19 @@ public class ImplicitsSummaryTest {
         TestAnalysisContext.getImplicitAnalyser().analyseMethod(methodSignature);
     MethodSummary summary = analysis.summary();
     assertNotNull(summary);
+    assertEquals(methodSignature, summary.methodSignature());
 
-    List<ExceptionPath> paths = summary.exceptionPaths();
-    // No explicit `athrow` in receiverNpe, so the only ExceptionPath is the implicit NPE
-    // synthesised at the `o.hashCode()` call site.
-    assertEquals(1, paths.size());
-    ExceptionPath ep = paths.get(0);
+    assertEquals(1, summary.exceptionPaths().size());
+    ExceptionPath ep = summary.exceptionPaths().getFirst();
     assertEquals("java.lang.NullPointerException", ep.getExceptionQualifiedName());
     assertEquals(ThrowSiteKind.IMPLICIT, ep.getThrowSiteKind());
     assertEquals(List.of(), ep.getProvenance());
+
+    // Predicate: receiver is null. truthValue=true means `o == null` must hold.
+    List<SymbolicConstraint> path0 = ep.getConstraints();
+    assertEquals(1, path0.size());
+    assertTrue(path0.getFirst().truthValue());
+    assertTrue(path0.getFirst().symExpr().toString().contains("o == null"));
   }
 
   @Test
@@ -39,15 +45,18 @@ public class ImplicitsSummaryTest {
         TestAnalysisContext.getImplicitAnalyser().analyseMethod(methodSignature);
     MethodSummary summary = analysis.summary();
     assertNotNull(summary);
+    assertEquals(methodSignature, summary.methodSignature());
 
-    List<ExceptionPath> paths = summary.exceptionPaths();
-    // No explicit `athrow` in fieldNpe, so the only ExceptionPath is the implicit NPE
-    // synthesised at the `b.x` field read.
-    assertEquals(1, paths.size());
-    ExceptionPath ep = paths.get(0);
+    assertEquals(1, summary.exceptionPaths().size());
+    ExceptionPath ep = summary.exceptionPaths().getFirst();
     assertEquals("java.lang.NullPointerException", ep.getExceptionQualifiedName());
     assertEquals(ThrowSiteKind.IMPLICIT, ep.getThrowSiteKind());
     assertEquals(List.of(), ep.getProvenance());
+
+    List<SymbolicConstraint> path0 = ep.getConstraints();
+    assertEquals(1, path0.size());
+    assertTrue(path0.getFirst().truthValue());
+    assertTrue(path0.getFirst().symExpr().toString().contains("b == null"));
   }
 
   @Test
@@ -57,40 +66,55 @@ public class ImplicitsSummaryTest {
         TestAnalysisContext.getImplicitAnalyser().analyseMethod(methodSignature);
     MethodSummary summary = analysis.summary();
     assertNotNull(summary);
+    assertEquals(methodSignature, summary.methodSignature());
 
     // path 0: NPE on the array base. collectImplicitNpePaths runs first.
     // path 1: AIOOBE on the index, with `arr != null` conjoined so the witness doesn't
     //         conflate with NPE (the JVM raises NPE before AIOOBE when both could fire).
-    List<ExceptionPath> paths = summary.exceptionPaths();
-    assertEquals(2, paths.size());
+    assertEquals(2, summary.exceptionPaths().size());
 
-    ExceptionPath npe = paths.get(0);
+    ExceptionPath npe = summary.exceptionPaths().getFirst();
     assertEquals("java.lang.NullPointerException", npe.getExceptionQualifiedName());
     assertEquals(ThrowSiteKind.IMPLICIT, npe.getThrowSiteKind());
     assertEquals(List.of(), npe.getProvenance());
 
-    ExceptionPath aioobe = paths.get(1);
+    List<SymbolicConstraint> npePath = npe.getConstraints();
+    assertEquals(1, npePath.size());
+    assertTrue(npePath.getFirst().truthValue());
+    assertTrue(npePath.getFirst().symExpr().toString().contains("arr == null"));
+
+    ExceptionPath aioobe = summary.exceptionPaths().get(1);
     assertEquals("java.lang.ArrayIndexOutOfBoundsException", aioobe.getExceptionQualifiedName());
     assertEquals(ThrowSiteKind.IMPLICIT, aioobe.getThrowSiteKind());
     assertEquals(List.of(), aioobe.getProvenance());
+
+    List<SymbolicConstraint> aioobePath = aioobe.getConstraints();
+    assertEquals(1, aioobePath.size());
+    assertTrue(aioobePath.getFirst().truthValue());
+    String aioobeExpr = aioobePath.getFirst().symExpr().toString();
+    assertTrue(aioobeExpr.contains("arr != null"), "AIOOBE predicate must include arr != null");
+    assertTrue(aioobeExpr.contains("arr.length"), "AIOOBE predicate must include arr.length");
   }
 
   @Test
   public void negativeArraySizeSummary() {
-    String methodSignature =
-        "<br.unb.cic.witup.samples.Implicits: int[] negativeArraySize(int)>";
+    String methodSignature = "<br.unb.cic.witup.samples.Implicits: int[] negativeArraySize(int)>";
     AnalysisResult analysis =
         TestAnalysisContext.getImplicitAnalyser().analyseMethod(methodSignature);
     MethodSummary summary = analysis.summary();
     assertNotNull(summary);
+    assertEquals(methodSignature, summary.methodSignature());
 
-    // Single implicit path: `new int[n]` raises NegativeArraySizeException when n < 0.
-    List<ExceptionPath> paths = summary.exceptionPaths();
-    assertEquals(1, paths.size());
-    ExceptionPath ep = paths.get(0);
+    assertEquals(1, summary.exceptionPaths().size());
+    ExceptionPath ep = summary.exceptionPaths().getFirst();
     assertEquals("java.lang.NegativeArraySizeException", ep.getExceptionQualifiedName());
     assertEquals(ThrowSiteKind.IMPLICIT, ep.getThrowSiteKind());
     assertEquals(List.of(), ep.getProvenance());
+
+    List<SymbolicConstraint> path0 = ep.getConstraints();
+    assertEquals(1, path0.size());
+    assertTrue(path0.getFirst().truthValue());
+    assertTrue(path0.getFirst().symExpr().toString().contains("n < 0"));
   }
 
   @Test
@@ -100,13 +124,17 @@ public class ImplicitsSummaryTest {
         TestAnalysisContext.getImplicitAnalyser().analyseMethod(methodSignature);
     MethodSummary summary = analysis.summary();
     assertNotNull(summary);
+    assertEquals(methodSignature, summary.methodSignature());
 
-    // Single implicit path: `a / b` raises ArithmeticException when b == 0.
-    List<ExceptionPath> paths = summary.exceptionPaths();
-    assertEquals(1, paths.size());
-    ExceptionPath ep = paths.get(0);
+    assertEquals(1, summary.exceptionPaths().size());
+    ExceptionPath ep = summary.exceptionPaths().getFirst();
     assertEquals("java.lang.ArithmeticException", ep.getExceptionQualifiedName());
     assertEquals(ThrowSiteKind.IMPLICIT, ep.getThrowSiteKind());
     assertEquals(List.of(), ep.getProvenance());
+
+    List<SymbolicConstraint> path0 = ep.getConstraints();
+    assertEquals(1, path0.size());
+    assertTrue(path0.getFirst().truthValue());
+    assertTrue(path0.getFirst().symExpr().toString().contains("b == 0"));
   }
 }
